use virtual or daemon threads only